testimonial overflow fixed

--- a/assets/css/crewho.css
+++ b/assets/css/crewho.css
@@ -494,6 +494,7 @@ p {
 
 .testimonials {
     margin-top: 7vh;
+    overflow: visible !important;
 }
 
 .testimonials p{
